<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.MainActivity">

        <androidx.cardview.widget.CardView
            android:id="@+id/searchContainer"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.15"
                    android:padding="10dp"
                    android:src="@drawable/ic_search" />

                <EditText
                    android:id="@+id/searchET"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/search_hint"
                    android:maxLines="1"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="4dp"
                    android:textAlignment="gravity"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@drawable/search_edit_text_cursor"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/clearText"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.10"
                    android:padding="8dp"
                    android:src="@drawable/ic_close"
                    android:visibility="gone"
                    app:tint="#8A8585" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/searchResultsList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchContainer"
            tools:listitem="@layout/layout_search_item" />

        <RelativeLayout
            android:id="@+id/startSearchingPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchContainer">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_start_search"
                app:tint="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/searchIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/start_searching_your_favourite_food_restaurant_and_cuisines"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/searchNotFoundPlaceholder"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchContainer">

            <ImageView
                android:id="@+id/notFound"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_search_not_found"
                app:tint="@color/red" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/notFound"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:text="@string/no_restaurants_found"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>